// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Experience should render for empty data: NoData 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        style="display: block; height: 800px; width: 1280px;"
      >
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: 10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Connection Success
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Time To Connect
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Client Throughput
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Online APs
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1281px; height: 801px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Client Experience should render widget with proper data 1`] = `
<DocumentFragment>
   
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        style="display: block; height: 800px; width: 1280px;"
      >
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: 10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Connection Success
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 73.88428515495194%; height: 10px; background: rgb(35, 171, 54);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Time To Connect
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 73.62284333197731%; height: 10px; background: rgb(35, 171, 54);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Client Throughput
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 79.54545454545455%; height: 10px; background: rgb(35, 171, 54);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-row Grid__GridRow-sc-5irhjd-2"
          style="margin: -10px -10px 15px -10px;"
        >
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              Online APs
            </div>
          </div>
          <div
            class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
            style="padding: 10px 10px 10px 10px;"
          >
            <div
              class="Grid__Container-sc-5irhjd-1 zzbxI"
            >
              <div
                class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 bHawIk"
              >
                <div
                  class="ant-progress-outer"
                >
                  <div
                    class="ant-progress-inner"
                    style="background-color: rgb(212, 212, 212);"
                  >
                    <div
                      class="ant-progress-bg"
                      style="width: 67.05309396485866%; height: 10px; background: rgb(35, 171, 54);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1281px; height: 801px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</DocumentFragment>
`;
